_includes/academy.css
header .wrapper {
    min-width: 16.5em;
}
.content {
    overflow: hidden;
}
.stretch {
    overflow-y: auto;
        width: 100vw;
    max-width: 100%;
    background-color: #88828c;
}
.stretch header,
.stretch main,
.stretch .bg {
    width: 100vw;
}
.stretch .logo {
    padding-right: 2.1em
}
.logo {
    overflow: hidden;
    direction: rtl;
    position: relative;
}
.logo img {
    max-width: initial;
}
.profile {
    display: inline-block;
    min-width: 6em;
    padding: .6em 1.2em .5em .4em;
    line-height: 1;
    font-weight: normal;
    text-align: right;
    vertical-align: top;
    background-color: #fff;
}
.profile img {
    width: 42px;
    height: 42px;
    margin-left: .6em;
    float: right;
    vertical-align: middle;
    background-color: #c5c5c5;
    border-radius: 100%;
}
.profile .table.center {
    justify-content: inherit;
    height: 2.3em;
}
.profile .cel.cel {
    padding: 0;
    margin: 0;
}
.profile .nowrap {
    overflow: hidden;
    max-width: 10em;
    margin-top: .2em;
    text-overflow: ellipsis;
}
.profile small {
    color: #00d;
    cursor: pointer;
}
.profile small:hover {
    text-decoration: underline;
}
.subscribe.subscribe {
    display: table-caption;
        width: 100%;
    max-width: 26em;
    padding: 5.7em 2em .5em;
    float: left;
    color: #fff;
    text-shadow: 1px 1px 1px #333;
}
.spin.spin.spin:before {
    content: "";
    display: inline-block;
    padding: .3em;
    margin: .25em;
    font-size: 160%;
    vertical-align: middle;
    border: .16em solid currentcolor;
    border-bottom-color: transparent;
    border-radius: 100%;
    animation: spin .36s infinite linear;
}
button.spin.spin.spin:before {
    margin: 1px;
}
@keyframes spin {
    to {
        transform: rotate(360deg);
    }
}
.subscribe h1,
.subscribe h2 {
    margin-bottom: .8em;
    color: #fff;
    text-shadow: 1px 1px 1px #333,
                 0 0 4em rgba(0,0,0,.2);
}
.subscribe h2 {
    margin-top: 5em;
}
.subscribe dd {
        width: 18em;
    max-width: 100%;
    margin: 0;
    text-align: right;
}
.subscribe label,
.subscribe a {
    color: #fff;
}
.subscribe a {
    text-decoration: underline;
}
.subscribe a:hover,
.subscribe a:focus {
    text-decoration: none;
}
.subscribe input {
    border-color: transparent;
    outline: 0;
}
.subscribe input:focus {
    box-shadow: 0 0 2em rgba(0,0,0,.55);
}
button:not([data-plyr]) {
    margin-top: .15em;
}
button.error:not([data-plyr]) {
    color: #fff;
    text-shadow: -1px 0 0 #333;
    background-color: #b00;
}
.table img {
    position: absolute;
    bottom: 0;
    top: 0;
    max-width: inherit;
    object-fit: cover;
    right: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}
.qa .column.label {
    width: inherit;
}
.column.nav-container,
.column.content {
    display: block;
    padding-top: 0;
}
.nav-container {
    z-index: 9;
    width: 16em;
    float: left;
    vertical-align: top;
}
.sidenav {
    width: 100%;
    margin-top: .8em;
    float: right;
    clear: both;
    line-height: 1.2;
    white-space: nowrap;
    background-color: #fff;
}
.sidenav + .sidenav {
    margin-top: 0;
    border-top: 4px solid #eee;
}
.sidenav,
.sidenav ol {
    counter-reset: item;
    padding: 0;
}
.sidenav li {
    display: block;
}
.sidenav time {
    margin: 0;
    margin-right: .4em;
    float: left;
    line-height: 1.3;
    font-weight: normal;
}
.sidenav label {
    display: block;
    position: relative;
    padding: 1em 1.2em;
    color: currentcolor;
    font-weight: bold;
    outline: 0;
    cursor: pointer;
}
.sidenav label[disabled] {
    color: #aaa;
    cursor: default;
}
.sidenav li label:before {
    content: counters(item, ".") ".";
    counter-increment: item;
    margin-left: .4em;
    float: right;
    font-weight: normal;
}
.sidenav div,
.sidenav a {
    overflow: hidden;
    text-overflow: ellipsis;
}
.sidenav a {
    display: block;
    color: inherit;
    text-decoration: none;
    outline: none;
}
.sidenav .expand {
    background-color: #eee;
}
.sidenav .active,
.sidenav a:hover,
.sidenav a:focus,
.sidenav label[onclick]:hover,
.sidenav label[onclick]:focus,
.nav-container .selected {
    color: #fff;
    background-color: #569e9b;
    border-color: #569e9b;
}
.sidenav label:not(.expand) a {
    pointer-events: none;
}
.sidenav label[onclick]:hover time,
.sidenav label[onclick]:focus time,
.nav-container .selected time {
    color: #fff;
}
.sidenav > li {
    border-top: 2px solid #eee;
}
.sidenav > li:first-child {
    border-top: 0;
}
.sidenav ol {
    overflow: hidden;
    max-height: 0;
    background-color: #eee;
    -webkit-transition: max-height .25s;
            transition: max-height .25s;
}
.sidenav .expand ~ ol {
    max-height: 10em;
    -webkit-transition: max-height 1s;
            transition: max-height 1s;
}
.sidenav ol li {
    border-top: 2px solid #f8f8f9;
}
.sidenav ol a {
    padding-top: 1em;
    padding-bottom: 1em;
    padding-right: 2.45em;
}
.comment-container {
    width: calc(100% - 16.8em);
}
.comment {
    padding-right: 2.1em;
    padding-left: 2.1em;
    box-sizing: border-box;
}
.medium.comment {
    max-width: 100%;
}
.bg {
    position: fixed;
    z-index: -1;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background: #88828c url(/assets/academy.jpg) center 3.7em no-repeat;
    background-size: cover;
}
.items .cover {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.items .cover h3 {
    overflow: hidden;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 1em;
    margin: 0;
    color: initial;
    text-align: right;
    text-overflow: ellipsis;
    text-shadow: 1px 1px 0 #fff;
    background-color: rgba(255,255,255,.8);
}
.form {
    margin: 6% 2.1em;
}
.form button.spin.spin.spin:before {
    margin: -.12em;
    margin-left: .3em;
}
.qa ol,
.qa input:checked ~ ol {
    padding: 0;
    margin: auto;
}
.qa > ol {
    margin: 1em auto;
}
/* ... */

